<resources>
    <string name="app_name">HttpURLConnectionDemo</string>
    <string name="get_pic">请求图片</string>
    <string name="get_code">请求HTML代码</string>
    <string name="get_code_web">将HTML代码加载到WebView里</string>

    <string name="user_name">用户名</string>
    <string name="user_pass">密    码</string>
    <string name="user_login">登陆</string>
    <string name="user_rem">记住密码</string>
    <string name="tip_name">请输入用户名</string>
    <string name="tip_pass">请输入用户密码</string>
    <string name="tip_result">服务器返回的数据</string>
</resources>
