<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_name"
        android:text="@string/user_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tv_name"
        android:hint="@string/tip_name" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_pass"
        android:layout_below="@+id/tv_name"
        android:text="@string/user_pass"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_name"
        android:layout_toRightOf="@+id/tv_pass"
        android:hint="@string/tip_name" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_pass"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_state_style"
        android:onClick="login"
        android:text="@string/user_login" />

    <CheckBox
        android:id="@+id/chbx_rem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_login"
        android:layout_below="@+id/et_pass"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/btn_login"
        android:text="@string/user_rem" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/tip_result" />

</RelativeLayout>